Updated IDs for elements to animate

--- a/styles/animations.css
+++ b/styles/animations.css
@@ -14,28 +14,14 @@
     100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
 }
 
-#im-new {
+#tonight {
     animation-name: fadeIn;
     animation-duration: 1s;
     animation-delay: 0.3s;
     animation-fill-mode: forwards;
 }
 
-#events {
-    animation-name: fadeIn;
-    animation-duration: 1s;
-    animation-delay: 0.6s;
-    animation-fill-mode: forwards;
-}
-
-#give {
-    animation-name: fadeIn;
-    animation-duration: 1s;
-    animation-delay: 0.9s;
-    animation-fill-mode: forwards;
-}
-
-#new-text {
+#tonight-text {
     animation-name: bounceFade;
     animation-duration: .4s;
     animation-delay: 1s;
@@ -43,7 +29,14 @@
     animation-timing-function: ease-in-out;
 }
 
-#events-text {
+#im-new {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 0.6s;
+    animation-fill-mode: forwards;
+}
+
+#im-new-text {
     animation-name: bounceFade;
     animation-duration: .4s;
     animation-delay: 1.3s;
@@ -51,13 +44,55 @@
     animation-timing-function: ease;
 }
 
-#give-text {
+#events {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 0.9s;
+    animation-fill-mode: forwards;
+}
+
+
+#events-text {
     animation-name: bounceFade;
     animation-duration: .4s;
     animation-delay: 1.6s;
     animation-fill-mode: forwards;
     animation-timing-function: ease;
 }
+
+#give {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 1.2s;
+    animation-fill-mode: forwards;
+}
+
+
+#give-text {
+    animation-name: bounceFade;
+    animation-duration: .4s;
+    animation-delay: 1.9s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+}
+
+#cag-website {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-delay: 1.5s;
+    animation-fill-mode: forwards;
+}
+
+
+#cag-website-text {
+    animation-name: bounceFade;
+    animation-duration: .4s;
+    animation-delay: 2.2s;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+}
+
+
 
 #icon {
     animation-name: logoDropDown;
