--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,16 @@
 }
 
 :root {
-    --theme-primary-color: #222f3e;
+    --theme-primary-color: #031233;
+    --theme-secondary-color: #7B8083;
+    --theme-background-color: var(--theme-primary-color);
     --theme-link-color: #355e8b;
+    --theme-text-color: #ecf0f1;
 }
 
 body {
-    background: #EDEDF5;
-    color: var(--theme-primary-color);
+    background: var(--theme-background-color);
+    color: var(--theme-text-color);
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -89,6 +92,7 @@ a {
 #portal a {
     display: block;
     position: relative;
+    background: var(--theme-primary-color);
 
     height: 30vh;
     width: 100%;
@@ -127,7 +131,7 @@ a {
     padding: 0;
     margin: 0;
     text-decoration: none;
-    color: white;
+    color: var(--theme-text-color);
     font-size: 40px;
 
     text-transform: uppercase;
@@ -157,7 +161,6 @@ a {
     top: 0px;
     left: 0px;
 
-    background: rgba(0, 0, 0, 0.5);
     width: 100%;
     height: 100%;
 
@@ -181,6 +184,7 @@ a:hover .overlay {
     height: 80px;
     overflow: hidden;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    background: var(--theme-text-color);
 }
 
 
@@ -202,7 +206,7 @@ a:hover .overlay {
     font-size: 30px;
     
     text-align: center;
-    color: #222f3e;
+    color: var(--theme-primary-color);
 
     text-transform: uppercase;
     font-family: 'Raleway', sans-serif;
@@ -216,7 +220,7 @@ a:hover .overlay {
     list-style: none;
     padding: 0px;
     margin: 0px;
-    color: white;
+    color: var(--theme-text-color);
 }
 
 .content li {
@@ -290,8 +294,8 @@ a:hover .overlay {
     margin: 10px;
     padding: 5px 20px;
     /* margin-bottom: 20px; */
-    border: 3px solid var(--theme-primary-color);
-    color: var(--theme-primary-color);
+    border: 3px solid var(--theme-text-color);
+    color: var(--theme-text-color);
     font-weight: bold;
     font-size: 16px;
     text-transform: uppercase;
@@ -324,7 +328,7 @@ a:hover .overlay {
     font-size: 40px;
     text-transform: uppercase;
     font-weight: bold;
-    color: white;
+    color: var(--theme-text-color);
 }
 
 #announcment-section {
@@ -351,7 +355,7 @@ a:hover .overlay {
 }
 
 .no-events {
-    color: var(--theme-primary-color);
+    color: var(--theme-text-color);
     text-align: center;
 }
 
@@ -364,7 +368,7 @@ a:hover .overlay {
 .connect-button {
     border: 3px solid var(--theme-primary-color);
     margin: 30px 10px;
-    color: var(--theme-primary-color);
+    color: var(--theme-text-color);
 }
 
 .connect-button h2 {
@@ -392,4 +396,5 @@ a:hover .overlay {
     height: 400px;
     object-fit: cover;
     object-position: top;
+    border: 3px solid var(--theme-text-color);
 }
