--- a/styles/style.css
+++ b/styles/style.css
@@ -375,7 +375,7 @@ a:hover .overlay {
     font-size: 40px;
     text-transform: uppercase;
     font-weight: bold;
-    color: var(--theme-primary-color);
+    color: var(--theme-text-color);
 }
 
 #announcment-section {
