--- a/styles/style.css
+++ b/styles/style.css
@@ -169,9 +169,11 @@ a {
 }
 
 #portal #social-media #social-media--wrapper {
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
+    width: 100%;
     transform: translate(-50%, -50%);
 }
 
